2011-11-22    <h.v.raven@googlemail.com>

	* src/spell.h (Duration): new class for dismissible option
	(Spell): changed class of duration to duration

	* src/spell.cpp (Duration::print): new function

	* src/spell.h (Spell_Element): changed set function names

	* src/xmldecoder.cpp (decode_elements_): added decoder for range

	* src/spell.h (set_range): new function

	* src/token.h (Spell_Elment_Token): new token for range value

	* src/xmldecoder.cpp (decode_range_): new function

2011-11-21    <h.v.raven@googlemail.com>

	* src/xmldecoder.cpp (decode_school_): removed a bug causing descriptors to be added to the subschool list

	* src/spell.h (Spell): added functions for accessing casting time and component

	* src/xmldecoder.cpp (decode_casting_time_): new function
	(decode_component_): new function
	(decode_elements_): integrated casting time and components

	* src/xml.h (Spell_List): renamed add_{elements,name,school,level} to decode_

	* src/xmlspelllist.cpp (check_spell_): renamed call of add_elements to decode_elements

2011-11-20    <h.v.raven@googlemail.com>

	* src/xmldecoder.cpp (add_school_): changed xml attribute calls to use query functions for better checks

	* src/token.h (Spell_Element_Token): added SUBSCHOOL and DESCRIPTOR

	* src/school.cpp (print): fixed bug printing descriptor in case no descriptor was set

	* src/error.h (exception): added Invalid_Element

	* src/spell.h (Spell): added set_level and add_level

	* src/xmldecoder.cpp (add_name_, add_school_, add_level_): changed parameter to const*
	(add_school_): changed insert to spell to set_school
	(add_name_): changed insert to spell to set_name
	(add_elements_): added level to switch
	(add_level_): complete rewrite

	* src/spell.cpp (add_element): simplified if check for TARGET

2011-10-21    <h.v.raven@googlemail.com>

	* src/gtkwindow.cpp (display_spell): changed to use RefPtr

	* src/xml.h (Spell_RefPtr): New class for save pointer acces on spells
