@@ -179,12 +179,14 @@ public:
   void set_value( const std::string& );
   void set_harmless( const bool harmless ) { harmless_ = harmless; };
   void set_see_text( const bool see_text ) { see_text_ = see_text; };
+  void set_object( const bool object ) { object_ = object; };
 
 private:
   Saving_Throw_Token type_;
   Saving_Throw_Value_Token value_;
   bool harmless_;
   bool see_text_;
+  bool object_;
 };
 
 class Spell_Resistance : public Spell_Element
@@ -248,6 +250,7 @@ protected:
   int value_;
 };
 
+/// \todo add per level
 class Duration : public Spell_Base_Element
 {
 public:
@@ -303,6 +306,8 @@ public:
     { components_.set_divine_focus(value); };
   void set_range( const Spell_Base_Element& range )
     { range_ = range; };
+  void set_duration( const Duration& duration )
+    { duration_ = duration; };
 
   // doesn't realy work and is not necessary
   void add_element( const Spell_Element_Token&, const Spell_Element&);
